# molcpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.cpp
include/: algo.h  atom.h  bond.h  element.h  frame.h  graph.h  io_utils.h  molecule.h  mplog.h  parsmart.h  topology.h  trajectory.h  utils.h
src/: algo.cpp  atom.cpp  bond.cpp  element.cpp  frame.cpp  graph.cpp  molecule.cpp  parsmart.cpp  topology.cpp  trajectory.cpp
tests/: CMakeLists.txt  test_algo.cpp  test_atom.cpp  test_element.cpp  test_frame.cpp  test_graph.cpp  test_io_utils.cpp  test_parsmart.cpp  utils.h
